#785: Analysis is done after test termination