@@ -18,6 +18,7 @@
 package com.seleniumtests.it.reporter;
 
 import java.io.File;
+import java.io.IOException;
 import java.nio.file.Paths;
 import java.util.List;
 
@@ -53,10 +54,9 @@ public class TestJUnitReporter extends ReporterTest {
 
 	/**
 	 * Check single test report format when tests have steps
-	 * @throws Exception
 	 */
 	@Test(groups={"it"})
-	public void testMultithreadTestReport() throws Exception {
+	public void testMultithreadTestReport() {
 		
 		SeleniumTestsContextManager.removeThreadContext();
 		List<String> testList = executeSubTest(3, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass", "com.seleniumtests.it.stubclasses.StubTestClassForDataProvider", "com.seleniumtests.it.stubclasses.StubTestClass2", "com.seleniumtests.it.stubclasses.StubTestClass3"}, ParallelMode.TESTS, new String[] {});
@@ -70,7 +70,7 @@ public class TestJUnitReporter extends ReporterTest {
 	}
 	
 	@Test(groups={"it"})
-	public void testReportGeneration(ITestContext testContext) throws Exception {
+	public void testReportGeneration() throws IOException {
 
 		List<String> testList = executeSubTest(1, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass"}, ParallelMode.METHODS, new String[] {"testAndSubActions", "testInError", "testWithException"});
 		
@@ -80,13 +80,13 @@ public class TestJUnitReporter extends ReporterTest {
 		for (String testName: testList) {
 			Assert.assertTrue(Paths.get(outDir, "junitreports", String.format("TEST-%s.xml", testName)).toFile().exists());
 		}
-		String result = readJUnitFile(testList.get(0));
+		String result = readJUnitFile(testList.getFirst());
 		Assert.assertTrue(result.matches(".*timestamp=\"\\d+\".*")); // check timestamp is in ms
 
 	}
 	
 	@Test(groups={"it"})
-	public void testReportContent(ITestContext testContext) throws Exception {
+	public void testReportContent() throws Exception {
 
 		List<String> testList = executeSubTest(1, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass"}, ParallelMode.METHODS, new String[] {"testAndSubActions", "testInError", "testWithException", "testSkipped"});
 		
@@ -109,96 +109,18 @@ public class TestJUnitReporter extends ReporterTest {
 	
 	/**
 	 * Check custom names are set in JUnit report
-	 * @param testContext
-	 * @throws Exception
 	 */
 	@Test(groups={"it"})
-	public void testReportContentCustomTestName(ITestContext testContext) throws Exception {
+	public void testReportContentCustomTestName() throws Exception {
 
 		List<String> testList = executeSubTest(1, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass"}, ParallelMode.METHODS, new String[] {"testOkWithTestName", "testOkWithTestNameAndDataProvider"});
 
-		String result = readJUnitFile(testList.get(0));
+		String result = readJUnitFile(testList.getFirst());
 		Assert.assertTrue(result.contains("<testcase classname=\"com.seleniumtests.it.stubclasses.StubTestClass\" name=\"A test which is &lt;OK&gt; é&amp;\""));
 		Assert.assertTrue(result.contains("<testcase classname=\"com.seleniumtests.it.stubclasses.StubTestClass\" name=\"A test which is OK (data2, data3)\""));
 		
 	}
-	
 
-	/**
-	 * Check that when snapshot server is used with behavior "addTestResult" 2 results should be presented: one with the result of selenium test, a second one with the result of snapshot comparison.
-	 * Both are the same but second test is there for integration with junit parser so that we can differentiate navigation result from GUI result.
-	 * @throws Exception
-	 */
-	@Test(groups={"it"})
-	public void testSnapshotComparisonKoAddTestResult() throws Exception {
-		try {
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_ACTIVE, "true");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT, "true");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT_BEHAVIOUR, "addTestResult");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_RECORD_RESULTS, "true");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_URL, "http://localhost:4321");
-			
-			configureMockedSnapshotServerConnection();
-			createServerMock("GET", SeleniumRobotSnapshotServerConnector.TESTCASEINSESSION_API_URL + "15", 200, "{'testSteps': [], 'computed': true, 'isOkWithSnapshots': false}");		
-			
-			SeleniumTestsContextManager.removeThreadContext();
-			List<String> testList = executeSubTest(1, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass"}, ParallelMode.METHODS, new String[] {"testAndSubActions"});
-			
-			// check there are 2 results. first one is the selenium test (OK) and second one is the snapshot comparison (KO)
-			String result = readJUnitFile(testList.get(0));
-			
-			Assert.assertTrue(result.contains("tests=\"2\""));
-			Assert.assertTrue(result.contains("errors=\"1\""));
-			Assert.assertTrue(result.contains("<error message=\"Snapshot comparison failed\" type=\"com.seleniumtests.customexception.ScenarioException\">"));
-			
-		} finally {
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_ACTIVE);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_URL);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT_BEHAVIOUR);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_RECORD_RESULTS);
-		}
-	}
-	
-	@Test(groups={"it"})
-	public void testSnapshotComparisonSkipAddTestResult() throws Exception {
-
-		try {
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_ACTIVE, "true");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT, "true");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT_BEHAVIOUR, "addTestResult");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_RECORD_RESULTS, "true");
-			System.setProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_URL, "http://localhost:4321");
-			
-			configureMockedSnapshotServerConnection();
-			createServerMock("GET", SeleniumRobotSnapshotServerConnector.TESTCASEINSESSION_API_URL + "15", 200, "{'testSteps': [], 'computed': true, 'isOkWithSnapshots': null, 'computingError': ['error1']}");		
-			
-			SeleniumTestsContextManager.removeThreadContext();
-			List<String> testList = executeSubTest(1, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass"}, ParallelMode.METHODS, new String[] {"testAndSubActions"});
-			
-			// check there are 2 results. first one is the selenium test (OK) and second one is the snapshot comparison (KO)
-			String result = readJUnitFile(testList.get(0));
-			Assert.assertTrue(result.contains("tests=\"2\""));
-			Assert.assertTrue(result.contains("errors=\"0\""));
-			Assert.assertTrue(result.contains("skipped=\"1\""));
-			
-			Assert.assertTrue(result.matches(".*<testcase classname=\"com.seleniumtests.it.stubclasses.StubTestClass\" name=\"snapshots-testAndSubActions\" time=\"\\d+\\.\\d+\"><skipped/>.*"));
-
-			
-		} finally {
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_ACTIVE);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_URL);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_COMPARE_SNAPSHOT_BEHAVIOUR);
-			System.clearProperty(SeleniumRobotServerContext.SELENIUMROBOTSERVER_RECORD_RESULTS);
-		}
-	}
-	
-	/**
-	 * Check that when snapshot server is used with behavior "addTestResult" 2 results should be presented: one with the result of selenium test, a second one with the result of snapshot comparison.
-	 * Both are the same but second test is there for integration with junit parser so that we can differentiate navigation result from GUI result.
-	 * @throws Exception
-	 */
 	@Test(groups={"it"})
 	public void testSnapshotComparisonKoChangeTestResult() throws Exception {
 		try {
@@ -214,8 +136,8 @@ public class TestJUnitReporter extends ReporterTest {
 			SeleniumTestsContextManager.removeThreadContext();
 			List<String> testList = executeSubTest(1, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass"}, ParallelMode.METHODS, new String[] {"testAndSubActions"});
 			
-			// check there are 2 results. first one is the selenium test (OK) and second one is the snapshot comparison (KO)
-			String result = readJUnitFile(testList.get(0));
+			// check there are 1 failed results only
+			String result = readJUnitFile(testList.getFirst());
 			Assert.assertTrue(result.contains("tests=\"1\""));
 			Assert.assertTrue(result.contains("errors=\"1\""));
 			Assert.assertTrue(result.contains("<error message=\"Snapshot comparison failed\" type=\"com.seleniumtests.customexception.ScenarioException\">"));
@@ -231,7 +153,6 @@ public class TestJUnitReporter extends ReporterTest {
 	
 	/**
 	 * When snapshot comparison is skipped, this does not change the test result
-	 * @throws Exception
 	 */
 	@Test(groups={"it"})
 	public void testSnapshotComparisonSkipChangeTestResult() throws Exception {
@@ -250,7 +171,7 @@ public class TestJUnitReporter extends ReporterTest {
 			List<String> testList = executeSubTest(1, new String[] {"com.seleniumtests.it.stubclasses.StubTestClass"}, ParallelMode.METHODS, new String[] {"testAndSubActions"});
 			
 			// check there is 1 results
-			String result = readJUnitFile(testList.get(0));
+			String result = readJUnitFile(testList.getFirst());
 			Assert.assertTrue(result.contains("tests=\"1\""));
 			Assert.assertTrue(result.contains("errors=\"0\"")); // as comparison is skipped, test result is not changed
 			Assert.assertFalse(result.contains("<error type=\"com.seleniumtests.customexception.ScenarioException\" message=\"Snapshot comparison failed\">"));
